# mcp-debug-proxy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html  index.md  urls.txt
mcp_debug_proxy/: __init__.py  cli.py  core.py  proxy.py  replay.py  report.py
tests/: test_core.py
